Adicionando data atual no rodapé

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                     <p>
                         Av. Paulista, 500<br>
                         São Paulo/SP<br>
-                        T. 2245-0977<br>
+                        Tel. 2245-0977<br>
                         contato@wedesign.com.br
                     </p>
                 </div>
